--- a/InstagramClone_mine/Screens/AddScreenVC.xib
+++ b/InstagramClone_mine/Screens/AddScreenVC.xib
@@ -4,7 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Image references" minToolsVersion="12.0"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,22 +13,21 @@
             <connections>
                 <outlet property="AddImageButton" destination="8Ke-2e-VxV" id="Vuo-yE-hbj"/>
                 <outlet property="imageView" destination="BoO-Pi-ELp" id="KLk-jZ-ZcR"/>
+                <outlet property="postButton" destination="Ree-ax-P4y" id="FNL-ph-fjj"/>
                 <outlet property="textView" destination="k75-hL-zRc" id="YVp-su-r5I"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="rKb-D0-y0Y">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="852"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="rKb-D0-y0Y">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="836"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TDh-qO-WZ9" userLabel="Close button">
                             <rect key="frame" x="8" y="52" width="398" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="30" id="F3U-Dr-daP"/>
                                 <constraint firstAttribute="height" constant="30" id="iPl-ez-gBU"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="40"/>
@@ -40,17 +39,23 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C66-xx-0dx">
-                            <rect key="frame" x="8" y="82" width="398" height="602"/>
+                            <rect key="frame" x="8" y="102" width="398" height="566"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Ke-2e-VxV">
-                                    <rect key="frame" x="162" y="286" width="74" height="30"/>
+                                <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Ke-2e-VxV">
+                                    <rect key="frame" x="124" y="258" width="150" height="50"/>
+                                    <color key="backgroundColor" name="AccentColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="150" id="FAT-Rq-veH"/>
+                                        <constraint firstAttribute="height" constant="50" id="cJc-zR-Pnh"/>
+                                    </constraints>
+                                    <color key="tintColor" systemColor="systemBackgroundColor"/>
                                     <state key="normal" title="Add Image"/>
                                     <connections>
                                         <action selector="imageTapped:" destination="-1" eventType="touchUpInside" id="Csv-s4-g2X"/>
                                     </connections>
                                 </button>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BoO-Pi-ELp">
-                                    <rect key="frame" x="0.0" y="20" width="398" height="562"/>
+                                    <rect key="frame" x="0.0" y="20" width="398" height="526"/>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -68,7 +73,7 @@
                             </connections>
                         </view>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Please enter text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="k75-hL-zRc">
-                            <rect key="frame" x="8" y="684" width="398" height="70"/>
+                            <rect key="frame" x="8" y="688" width="398" height="70"/>
                             <color key="backgroundColor" systemColor="systemGray5Color"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="70" id="iOL-Km-d4a"/>
@@ -81,10 +86,16 @@
                             </connections>
                         </textView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ree-ax-P4y">
-                            <rect key="frame" x="8" y="754" width="398" height="90"/>
+                            <rect key="frame" x="8" y="778" width="398" height="50"/>
+                            <color key="backgroundColor" name="AccentColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="ftJ-4U-42h"/>
+                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
                             <inset key="contentEdgeInsets" minX="0.0" minY="20" maxX="0.0" maxY="20"/>
-                            <state key="normal" title="Post"/>
+                            <state key="normal" title="Post">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
                             <connections>
                                 <action selector="tappedPost:" destination="-1" eventType="touchUpInside" id="lwd-JH-VOP"/>
                             </connections>
@@ -92,22 +103,21 @@
                     </subviews>
                     <constraints>
                         <constraint firstItem="TDh-qO-WZ9" firstAttribute="leading" secondItem="rKb-D0-y0Y" secondAttribute="leading" constant="8" id="1Im-8a-aQ4"/>
-                        <constraint firstItem="TDh-qO-WZ9" firstAttribute="top" secondItem="rKb-D0-y0Y" secondAttribute="top" constant="52" id="Obp-nt-nlw"/>
+                        <constraint firstItem="Ree-ax-P4y" firstAttribute="centerX" secondItem="rKb-D0-y0Y" secondAttribute="centerX" id="iSE-Sc-Ybv"/>
                         <constraint firstItem="k75-hL-zRc" firstAttribute="centerX" secondItem="rKb-D0-y0Y" secondAttribute="centerX" id="k5W-WH-0K3"/>
                     </constraints>
                     <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="8"/>
                 </stackView>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="rKb-D0-y0Y" secondAttribute="bottom" constant="10" id="2fY-3O-qva"/>
-                <constraint firstItem="k75-hL-zRc" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="3AG-Lp-yc4"/>
-                <constraint firstItem="rKb-D0-y0Y" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="L3K-U6-zpx"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="rKb-D0-y0Y" secondAttribute="trailing" id="n4Y-ai-N2p"/>
+                <constraint firstItem="k75-hL-zRc" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="3AG-Lp-yc4"/>
+                <constraint firstItem="rKb-D0-y0Y" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="L3K-U6-zpx"/>
+                <constraint firstAttribute="bottom" secondItem="rKb-D0-y0Y" secondAttribute="bottom" constant="60" id="aK1-sO-njg"/>
+                <constraint firstAttribute="trailing" secondItem="rKb-D0-y0Y" secondAttribute="trailing" id="n4Y-ai-N2p"/>
                 <constraint firstItem="rKb-D0-y0Y" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="sRB-vJ-kxC"/>
             </constraints>
-            <point key="canvasLocation" x="148" y="133"/>
+            <point key="canvasLocation" x="147.82608695652175" y="132.58928571428572"/>
         </view>
         <tapGestureRecognizer id="hCL-vt-PP5">
             <connections>
@@ -117,6 +127,9 @@
     </objects>
     <resources>
         <image name="xmark" catalog="system" width="128" height="113"/>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
