--- a/InstagramClone_mine/Screens/DetailScreenVC.xib
+++ b/InstagramClone_mine/Screens/DetailScreenVC.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,6 +17,7 @@
                 <outlet property="newCommentTextView" destination="5hH-at-cYm" id="1x3-tb-QfT"/>
                 <outlet property="postScreenImageView" destination="g5I-Dy-td4" id="bTB-sE-pFw"/>
                 <outlet property="postScrenDescriptionLabel" destination="KBn-cP-SkD" id="ZiF-4h-FbY"/>
+                <outlet property="profilePictureImageView" destination="Ird-4b-KPn" id="4ia-Zc-Rbq"/>
                 <outlet property="scrollView" destination="qvv-xV-W70" id="3S2-Bz-iCr"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -30,7 +31,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="414" height="1001"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ZVP-zE-yQH">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="950"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="978"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g5I-Dy-td4">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
@@ -79,10 +80,24 @@
                                     </connections>
                                 </tableView>
                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="0SR-i0-KgE" userLabel="New Comment Stack">
-                                    <rect key="frame" x="8.5" y="834" width="397" height="116"/>
+                                    <rect key="frame" x="8.5" y="834" width="397" height="144"/>
                                     <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mona" translatesAutoresizingMaskIntoConstraints="NO" id="Ird-4b-KPn" userLabel="profilePictureImageView">
+                                            <rect key="frame" x="8" y="47" width="50" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="50" id="ovg-J9-5b6"/>
+                                                <constraint firstAttribute="height" constant="50" id="sMF-zw-8Wu"/>
+                                            </constraints>
+                                        </imageView>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c3f-Of-BXs">
+                                            <rect key="frame" x="58" y="8" width="10" height="128"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="10" id="yfg-bK-A0O"/>
+                                            </constraints>
+                                        </view>
                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="5hH-at-cYm">
-                                            <rect key="frame" x="8" y="8" width="331" height="100"/>
+                                            <rect key="frame" x="68" y="22" width="271" height="100"/>
                                             <color key="backgroundColor" systemColor="systemGray5Color"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="100" id="BQi-bP-WEK"/>
@@ -95,7 +110,7 @@
                                             </connections>
                                         </textView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UEH-ZE-6am">
-                                            <rect key="frame" x="339" y="43" width="50" height="30"/>
+                                            <rect key="frame" x="339" y="57" width="50" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="50" id="kr3-au-FC9"/>
                                             </constraints>
@@ -146,6 +161,7 @@
     </objects>
     <resources>
         <image name="arrow.turn.up.right" catalog="system" width="128" height="99"/>
+        <image name="mona" width="800" height="1210"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
