--- a/InstagramClone_mine/Screens/Home/HomeCell.xib
+++ b/InstagramClone_mine/Screens/Home/HomeCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Post" rowHeight="677" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-i7-Jjw" customClass="HomeCell" customModule="InstagramClone_mine" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Post" rowHeight="677" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-i7-Jjw">
             <rect key="frame" x="0.0" y="0.0" width="367" height="677"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="367" height="677"/>
@@ -34,9 +34,6 @@
                                             <constraint firstAttribute="width" constant="30" id="O8J-60-eud"/>
                                         </constraints>
                                         <state key="normal" image="heart" catalog="system"/>
-                                        <connections>
-                                            <action selector="likeButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Rwz-Dg-dgm"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mm7-VI-rWg" customClass="CustomCommentButton" customModule="InstagramClone_mine" customModuleProvider="target">
                                         <rect key="frame" x="41" y="0.0" width="30" height="50"/>
@@ -45,9 +42,6 @@
                                             <constraint firstAttribute="height" constant="50" id="wnd-BK-LZi"/>
                                         </constraints>
                                         <state key="normal" image="message" catalog="system"/>
-                                        <connections>
-                                            <action selector="commentButtonClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="GdC-1q-xJz"/>
-                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LZF-xc-hDn" userLabel="Share Button">
                                         <rect key="frame" x="77" y="0.0" width="30" height="50"/>
@@ -56,9 +50,6 @@
                                             <constraint firstAttribute="width" constant="30" id="nNN-e5-TVC"/>
                                         </constraints>
                                         <state key="normal" image="arrow.turn.up.right" catalog="system"/>
-                                        <connections>
-                                            <action selector="ShareButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="slf-dC-yDh"/>
-                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ka6-l7-acr">
                                         <rect key="frame" x="113" y="0.0" width="213" height="50"/>
@@ -71,9 +62,6 @@
                                             <constraint firstAttribute="width" constant="30" id="eU9-MY-XDi"/>
                                         </constraints>
                                         <state key="normal" image="bookmark" catalog="system"/>
-                                        <connections>
-                                            <action selector="bookmarkButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Pf6-Ig-xBh"/>
-                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -111,14 +99,6 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <gestureRecognizers/>
-            <connections>
-                <outlet property="bookmarkButton" destination="5X3-5W-JW3" id="VSw-Ze-fT8"/>
-                <outlet property="commentButton" destination="Mm7-VI-rWg" id="9MO-48-xNv"/>
-                <outlet property="likeButton" destination="fvI-7d-pDA" id="CDU-JU-qmr"/>
-                <outlet property="postImage" destination="Pd3-cD-1JF" id="Nfg-gD-KdR"/>
-                <outlet property="postLabel" destination="SRW-OD-vhJ" id="Te5-Dq-Ggh"/>
-                <outlet property="textViewHeight" destination="vTd-FM-Lm6" id="Gyf-EM-Fea"/>
-            </connections>
             <point key="canvasLocation" x="183.33333333333334" y="294.30803571428572"/>
         </tableViewCell>
     </objects>
